Updated headers Checked in changes by Micheal Eskin and Hauppauge

--- a/Deinterlace/Todo.txt
+++ b/Deinterlace/Todo.txt
@@ -1,8 +1,6 @@
 
  TODO:
    
-   * Find a good way of deinterlacing video. :)
-
    * Build a player app that includes the filter
 
    * Find out what formats are required to support the majority of suitable capture cards
@@ -14,9 +12,13 @@
    * Support free compliers not just MSVC
 
    * Tie the filter to a deinterlace library (not created yet)
+
    * Rewrite media type negotiation to use upstream filter's enumerator
      Pass all media type changes from a downstream filter upstream and
      perform deinterlacing only on known media types - otherwise
      copy samples unmodified
+
+If you want to help please see the developer page at
+http://www.dscaler.org/
 
 
