--- a/Deinterlace/News.txt
+++ b/Deinterlace/News.txt
@@ -1,5 +1,12 @@
+2001-09-20 Michael Eskin
+    Got working with WDM video card drivers
 
+2001-01-05 Peter Gubanov
+    Got working with mpeg filter
+    Now support four methods
+    
 2000-06-28 John Adcock (john@adcock8.freeserve.co.uk)
 	The first version!
 	It doesn't really do anything yet but I does show how 
 	you would go about writing a deinterlacing plug-in.
+
