--- a/Deinterlace/Thanks.txt
+++ b/Deinterlace/Thanks.txt
@@ -2,10 +2,19 @@ Deinterlace Thanks file
 
 The following people have submitted code to the project
 
-	John Adcock (john@adcock8.freeserve.co.uk) got the ball rolling 
+	John Adcock - got the ball rolling 
 	by creating a shell for experimentation around the DirectShow
 	Sample ezrgb24
 
+	Tom Barry - His code is used for CPU detection and the blended clip alogorithm
+
+	Steve Grimm - Wrote the two frame alogorithm
+
+	Peter Gubanov - Make the whole thing work by taking on the project.
+
+	Mark Rejhon - Supplid many bug fixes and improvements to the alogorthms and code.
+
+    Michael Eskin - Made this work with the WDM drivers for Connexant video cards
 
 Special Thanks goto
 
